# Rust_Getting_Start

FQS-19/: Cargo.toml
FQS-19/src/: main.rs
GUI-17/: Cargo.toml
GUI-17/src/: lib.rs  main.rs
adder/src/: lib.rs
adder/tests/: another_integration_tests.rs  integration_tests.rs
blog-17/: Cargo.toml
blog-17-gai/: Cargo.toml
blog-17-gai/src/: lib.rs  main.rs
blog-17/src/: lib.rs  main.rs
box_15/src/: main.rs
closure/src/: main.rs
collection/src/: lib.rs  main.rs
csv_to_json_crate/: Cargo.toml
csv_to_json_crate/src/: functions.rs  lib.rs  main.rs  models.rs
deref/src/: main.rs
derive-19/: Cargo.toml
derive-19/Pancakes/: Cargo.toml
empty_19/: Cargo.toml
empty_19/src/: main.rs
enumerate/src/: main.rs
extern-19/: Cargo.toml
extern-19/src/: main.rs
fn_pointer_19/: Cargo.toml
fn_pointer_19/src/: main.rs
generic/src/: main.rs
guessing_game/src/: main.rs
hello/: main  main.rs
hello_web_20/: Cargo.toml
hello_web_20/src/: lib.rs  main.rs
iter/src/: lib.rs  main.rs
leak-15/: Cargo.toml
leak-15/src/: main.rs
macro_19/: Cargo.toml
minigrep/: output.txt
mutex-16/: Cargo.toml
new_type_19/: Cargo.toml
package/: Cargo.toml
parttern-18/: Cargo.toml
profile/: Cargo.toml
property_macro-19/: Cargo.toml
publishCrate_14/: Cargo.toml
publishCrate_14/src/: lib.rs  main.rs
raw_pointer-19/: Cargo.toml
rc-15/: Cargo.toml
recell-15/: Cargo.toml
static-19/: Cargo.toml
super_trait_19/: Cargo.toml
thread-16/: Cargo.toml
trait-19/: Cargo.toml
type_19/: Cargo.toml
unsafe-19/: Cargo.toml
workspace/: Cargo.toml
(+39 files in other folders)
